--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ exclude = ["target/", "website/"]
 bytes = "1"
 clap = { version = "4", features = ["derive"] }
 dialoguer = "0.11"
-tokio-postgres = "0.7"
+tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "signal"] }
 colored = "2"
 chrono = { version = "0.4", features = ["serde"] }
